--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,6 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.16.0'
 }
 
-version 'v0.0.3'
-
 publishing {
     publications {
         feelingsImpl(MavenPublication) {
@@ -51,9 +49,28 @@ bintray {
         userOrg = 'espere-me'
 
         version {
-            name = 'v0.0.3'
+            name = project.property('version')
         }
     }
 
     publications = ['feelingsImpl']
+
+    publish = true
 }
+
+task checkVersion {
+    description 'This task fails the build if the version property is not set'
+
+    doLast {
+        if (project.property('version') == 'unspecified') {
+            throw new GradleException('You must specify a version property')
+        }
+    }
+}
+
+tasks.bintrayUpload.dependsOn checkVersion
+tasks.bintrayUpload.dependsOn clean
+tasks.bintrayUpload.dependsOn build
+
+clean.mustRunAfter checkVersion
+build.mustRunAfter clean
